@@ -64,6 +64,20 @@ namespace traits{
       static const bool value = sizeof(__test<T>(0)) == 1;
     };
   
+  template<typename T>
+  class _is_exporter_helper : __sfinae_types {
+      template<typename U> struct _Wrap_type { };
+
+      template<typename U>
+        static __one __test(_Wrap_type<typename U::r_export_type>*);
+
+      template<typename U>
+        static __two __test(...);
+
+    public:
+      static const bool value = sizeof(__test<T>(0)) == 1;
+    };
+
   /** 
    * uses the SFINAE idiom to check if a class has an 
    * nested iterator typedef. For example : 
@@ -75,8 +89,7 @@ namespace traits{
   	integral_constant<bool,_has_iterator_helper<T>::value> { };
 
   /**
-   * uses SFINAE to identify if a type is importable, i.e. if it conforms
-   * to the Rcpp::traits::Importer interface.
+   * uses SFINAE to identify if a type is importable
    *
    * The test is based on the presence of a typedef r_import_type in the 
    * class
@@ -84,7 +97,9 @@ namespace traits{
   template<typename T> struct is_importer : 
     integral_constant<bool,_is_importer_helper<T>::value> { };
 	
-  	
+  template<typename T> struct is_exporter : 
+    integral_constant<bool,_is_exporter_helper<T>::value> { };
+
 } // traits
 } // Rcpp
 
