@@ -113,96 +113,6 @@ template<> std::string as<std::string>(SEXP m_sexp) {
     return std::string(CHAR(STRING_ELT(m_sexp,0)));
 }
 
-template<> std::vector<bool> as< std::vector<bool> >(SEXP m_sexp) {
-    R_len_t n = Rf_length(m_sexp);
-    std::vector<bool> v(n);
-    switch( TYPEOF(m_sexp) ){
-    case LGLSXP:
-    	std::transform( LOGICAL(m_sexp), LOGICAL(m_sexp)+n, v.begin(), Rboolean_to_bool ) ;
-    	break ;
-    case INTSXP:
-    	std::transform( INTEGER(m_sexp), INTEGER(m_sexp)+n, v.begin(), int_to_bool ) ;
-    	break;
-    case REALSXP:
-    	std::transform( REAL(m_sexp), REAL(m_sexp)+n, v.begin(), double_to_bool ) ;
-    	break;
-    case RAWSXP:
-    	std::transform( RAW(m_sexp), RAW(m_sexp)+n, v.begin(), Rbyte_to_bool ) ;
-    	break;
-    default:
-    		throw std::range_error( "as< vector<bool> >: invalid R type" ) ; 
-    }
-    return v;
-}
-
-
-template<> std::vector<int> as< std::vector<int> >(SEXP m_sexp){
-    R_len_t n = Rf_length(m_sexp);
-    std::vector<int> v(n);
-    switch( TYPEOF(m_sexp) ){
-    case INTSXP:
-    	v.assign( INTEGER(m_sexp), INTEGER(m_sexp)+n ) ;
-    	break;
-    case LGLSXP:
-    	std::transform( LOGICAL(m_sexp), LOGICAL(m_sexp)+n, v.begin(), internal::r_coerce<LGLSXP,INTSXP> ) ;
-    	break;
-    case REALSXP:
-    	std::transform( REAL(m_sexp), REAL(m_sexp)+n, v.begin(), internal::r_coerce<REALSXP,INTSXP> ) ;
-    	break;
-    case RAWSXP:
-    	std::transform( RAW(m_sexp), RAW(m_sexp)+n, v.begin(), internal::r_coerce<RAWSXP,INTSXP> ) ;
-    	break;
-    default:
-    		throw std::range_error( "as< vector<int> >: invalid R type" ) ; 
-    }
-    return v;
-}
-
-template<> std::vector<Rbyte> as< std::vector<Rbyte> >(SEXP m_sexp) {
-    R_len_t n = Rf_length(m_sexp);
-    std::vector<Rbyte> v(n);
-    switch( TYPEOF(m_sexp) ){
-    case LGLSXP:
-    	std::transform( LOGICAL(m_sexp), LOGICAL(m_sexp)+n, v.begin(), internal::r_coerce<LGLSXP,RAWSXP> ) ;
-    	break ;
-    case RAWSXP:
-    	v.assign( RAW(m_sexp), RAW(m_sexp)+n ) ;
-    	break ;
-    case REALSXP:
-    	std::transform( REAL(m_sexp), REAL(m_sexp)+n, v.begin(), internal::r_coerce<REALSXP,RAWSXP> ) ;
-    	break;
-    case INTSXP:
-    	std::transform( INTEGER(m_sexp), INTEGER(m_sexp)+n, v.begin(), internal::r_coerce<INTSXP,RAWSXP> ) ;
-    	break;
-    default:
-    	throw std::range_error("as< vector<Rbyte> > expects raw, double or int");
-    }
-    return v;
-}
-
-template<> std::vector<double> as< std::vector<double> >(SEXP m_sexp){
-    R_len_t n = Rf_length(m_sexp);
-    std::vector<double> v(n);
-    switch( TYPEOF(m_sexp) ){
-    case LGLSXP:
-    	std::transform( LOGICAL(m_sexp), LOGICAL(m_sexp)+n, v.begin(), internal::r_coerce<LGLSXP,REALSXP> ) ;
-    	break ;
-    case RAWSXP:
-    	std::transform( RAW(m_sexp), RAW(m_sexp)+n, v.begin(), internal::r_coerce<RAWSXP,REALSXP> ) ;
-    	break ;
-    case REALSXP:
-    	v.assign( REAL(m_sexp), REAL(m_sexp)+n) ;
-    	break;
-    case INTSXP:
-    	std::transform( INTEGER(m_sexp), INTEGER(m_sexp)+n, v.begin(), internal::r_coerce<INTSXP,REALSXP>) ;
-    	break;
-    default:
-    	    throw std::range_error("as< vector<double> >:  expects raw, double or int");
-    }
-    return v;
-}
-
-
 template<> std::vector<std::string> as< std::vector<std::string> >(SEXP m_sexp){
     R_len_t n = Rf_length(m_sexp);
     std::vector<std::string> v(n);
